--- a/2021II_GBI6_ExamenParcialPython.ipynb
+++ b/2021II_GBI6_ExamenParcialPython.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "## GBI6-2021II: BIOINFORMÁTICA\n",
     "\n",
-    "**Apellidos, Nombres** <--- CAMBIE POR LOS QUE CORRESPONDA A SUS DATOS\n",
+    "**Auquilla Villamagua Maria Jose** \n",
     "\n",
     "**18-02-2021**"
    ]
