--- a/2021II_GBI6_ExamenParcialPython.ipynb
+++ b/2021II_GBI6_ExamenParcialPython.ipynb
@@ -63,16 +63,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El nombre de la la funcion es: download_pubmed\n",
+      "Documentacion de la funcion : \"La funcion download_pubmed se encarga de rescatar la id de los documentos que esten relacionados con la keyword que se envio en la base de datos de pubmed \n",
+      "__________________________________\n",
+      "El nombre de la la funcion es: mining_pubs\n",
+      "Documentacion de la funcion : \"La función de mining_pubs se encarga de filtrar la data dependiendo de la variable (tipo) que se envió pudiendo ser esta DP AU o AD , los datos  PMID para la extracción de documentos se obtienen gracias a la función download_pubmed que busca los documentos exactos basados en su ID   \n"
+     ]
+    }
+   ],
    "source": [
     "from Bio import Entrez \n",
     "from Bio import SeqIO\n",
     "import pandas as pd\n",
     "import re,csv,itertools\n",
     "import numpy as np\n",
-    "\n"
+    "\n",
+    "#obtencion de datos (documentos relacionados con la palabra ) 10**5\n",
+    "def download_pubmed(keyword):\n",
+    "    \"\"\"\"La funcion download_pubmed se encarga de rescatar la id de los documentos que esten relacionados con la keyword que se envio en la base de datos de pubmed \"\"\"\n",
+    "    Entrez.email = 'your.email@example.com'\n",
+    "    handle = Entrez.esearch(db='pubmed',retmax=10**5 ,retmode='xml',term=keyword)\n",
+    "    results = Entrez.read(handle)\n",
+    "    return results\n",
+    "\n",
+    "def mining_pubs(tipo):\n",
+    "    \"\"\"\"La función de mining_pubs se encarga de filtrar la data dependiendo de la variable (tipo) que se envió pudiendo ser esta DP AU o AD , los datos  PMID para la extracción de documentos se obtienen gracias a la función download_pubmed que busca los documentos exactos basados en su ID   \"\"\"\n",
+    "    #--------------------------Uso del metodo download_pubmed---------------------------------------\n",
+    "    results = download_pubmed('Ecuador genomics') #Se usa el metodo download_pubmed para obtener los documentos con una keyword  \n",
+    "    #-----------------------------------------------------------------------------------------------\n",
+    "    \n",
+    "    id_list = results['IdList']                                                  #separamos ids    \n",
+    "    ids = ','.join(id_list)    \n",
+    "    Entrez.email = 'your.email@example.com'\n",
+    "    handle = Entrez.efetch(db='pubmed',rettype='medline',retmode='text',id=ids)  #rescatamos ducumentos por id\n",
+    "    all_data = handle.read()                                                     #se lee la data\n",
+    "    \n",
+    "    if(tipo == \"DP\"):#PMID y DP_year \n",
+    "        zipcodes = re.findall(r'PMID-.(.+)', all_data)\n",
+    "        zipcodes1 = re.findall(r'DP  -.(.+)', all_data)\n",
+    "        all_ = list(zip(zipcodes,zipcodes1))\n",
+    "        nom_colum = ['PMID','DP_year']\n",
+    "    else:\n",
+    "        if(tipo == \"AU\"):#PMID y el num_auth\n",
+    "            zipcodes = re.findall(r'PMID-.(.+)|(AU)  -|', all_data) \n",
+    "            nom_colum = ['PMID','num_auth']\n",
+    "            \n",
+    "        elif(tipo == \"AD\"):#country y el num_auth\n",
+    "            zipcodes = re.findall(r'PL  -.(.+)|(AU)  -|', all_data)\n",
+    "            nom_colum = ['country','num_auth']\n",
+    "        mira = list()\n",
+    "        for x in zipcodes:\n",
+    "            if(x[0]!=''):\n",
+    "                mira.append((x[0],''))\n",
+    "            elif(x[1]!=''):\n",
+    "                mira.append(('',x[1]))\n",
+    "        zipcodes= mira       \n",
+    "        lista_1 = list()\n",
+    "        lista_2 = list()\n",
+    "        va_c = 0\n",
+    "        for y in zipcodes:\n",
+    "            if(y[0] !=''):\n",
+    "                x_0 = y[0]\n",
+    "                lista_1.append(y[0])\n",
+    "                if(va_c != 0):\n",
+    "                    lista_2.append(va_c)\n",
+    "                    va_c = 0\n",
+    "            else:\n",
+    "                va_c = va_c+1            \n",
+    "        all_ = list(zip(lista_1,lista_2))\n",
+    "        \n",
+    "    results = pd.DataFrame(all_,columns = nom_colum)             \n",
+    "    return results\n",
+    "\n",
+    "#seccion de ejecicion de codigo y envio de variables\n",
+    "#id_list = results['IdList']          #separamos ids \n",
+    "if __name__ == '__main__':\n",
+    " #--------------------------Se ingresa la varaible tipo para iniciar---------------------------------------\n",
+    "    #resultado_final = mining_pubs(\"AU\")  #Enviamos el tipo para el procesamiento ER (DP AU AD)  \n",
+    "#---------------------------------------------------------------------------------------------------------\n",
+    "    print(\"El nombre de la la funcion es:\",download_pubmed.__name__ )\n",
+    "    print(\"Documentacion de la funcion :\",download_pubmed.__doc__)\n",
+    "    print(\"__________________________________\")\n",
+    "    print(\"El nombre de la la funcion es:\",mining_pubs.__name__ )\n",
+    "    print(\"Documentacion de la funcion :\",mining_pubs.__doc__)"
    ]
   },
   {
