--- a/2021II_GBI6_ExamenParcialPython.ipynb
+++ b/2021II_GBI6_ExamenParcialPython.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -175,12 +175,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número de artículos es: 193\n",
+      "El PMID del primer artículo es: 35121084\n"
+     ]
+    }
+   ],
    "source": [
     "# Escriba aquí su código para el ejercicio 2\n",
-    "\n"
+    "results = download_pubmed('Ecuador genomics')\n",
+    "\n",
+    "#imprime el dataframe\n",
+    "print('El número de artículos es: '+results['RetMax'])\n",
+    "print('El PMID del primer artículo es: '+results['IdList'][0])"
    ]
   },
   {
@@ -202,12 +215,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Escriba aquí su código para el ejercicio 3"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -229,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
