--- a/2021II_GBI6_ExamenParcialPython.ipynb
+++ b/2021II_GBI6_ExamenParcialPython.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -84,6 +84,7 @@
     "import pandas as pd\n",
     "import re,csv,itertools\n",
     "import numpy as np\n",
+    "\n",
     "\n",
     "#obtencion de datos (documentos relacionados con la palabra ) 10**5\n",
     "def download_pubmed(keyword):\n",
@@ -152,7 +153,7 @@
     "    print(\"Documentacion de la funcion :\",download_pubmed.__doc__)\n",
     "    print(\"__________________________________\")\n",
     "    print(\"El nombre de la la funcion es:\",mining_pubs.__name__ )\n",
-    "    print(\"Documentacion de la funcion :\",mining_pubs.__doc__)"
+    "    print(\"Documentacion de la funcion :\",mining_pubs.__doc__)\n"
    ]
   },
   {
