--- a/2021II_GBI6_ExamenParcialPython.ipynb
+++ b/2021II_GBI6_ExamenParcialPython.ipynb
@@ -603,11 +603,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Escriba aquí su código para el ejercicio 4"
+    "# Escriba aquí su código para el ejercicio 4\n",
+    "import numpy as np \n",
+    "import matplotlib.pyplot as plt \n",
+    "from scipy.stats import norm \n",
+    "import statistics "
    ]
   },
   {
