--- a/2021II_GBI6_ExamenParcialPython.ipynb
+++ b/2021II_GBI6_ExamenParcialPython.ipynb
@@ -603,15 +603,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Desviacion Estandar\n",
+      "13.045912514398267\n",
+      "Media\n",
+      "12.0625\n"
+     ]
+    }
+   ],
    "source": [
     "# Escriba aquí su código para el ejercicio 4\n",
     "import numpy as np \n",
     "import matplotlib.pyplot as plt \n",
     "from scipy.stats import norm \n",
-    "import statistics "
+    "import statistics \n",
+    "\n",
+    "pub_year['conteo'] = pd.to_datetime(pub_year['DP_year'], infer_datetime_format=True)\n",
+    "data = pub_year['conteo'].dt.strftime('%Y')\n",
+    "data = pd.DataFrame(data, columns = ['conteo'])\n",
+    "data = pd.DataFrame(data[\"conteo\"].value_counts())\n",
+    "df = pd.DataFrame(data.rename_axis(columns=\"DP_year\"))\n",
+    "#print(df)\n",
+    "#desvicioon estandar \n",
+    "sd = df.conteo.std()\n",
+    "print('Desviacion Estandar' )\n",
+    "print(sd)\n",
+    "#media\n",
+    "print('Media')\n",
+    "mean = df['conteo'].mean()\n",
+    "print(mean)\n",
+    "#datos\n",
+    "x_axis=list(df['conteo'])"
    ]
   },
   {
