maria jose a finalizado la descripcion del ejercio 6
:3

--- a/2021II_GBI6_ExamenParcialPython.ipynb
+++ b/2021II_GBI6_ExamenParcialPython.ipynb
@@ -904,7 +904,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "En el patrón de ramificación de el árbol filogenético de el hongo Reishi, se refleja cómo las especies u otros grupos evolucionaron a partir de una serie de ancestros comunes."
+   ]
   },
   {
    "cell_type": "markdown",
