maria jose a realizado el ultimo cambio de la prueba
pregunta 6 y 5 mejorada

--- a/2021II_GBI6_ExamenParcialPython.ipynb
+++ b/2021II_GBI6_ExamenParcialPython.ipynb
@@ -700,7 +700,9 @@
    "source": [
     "## Ejercicio 5 [1 punto]\n",
     "\n",
-    "Interprete los resultados del **ejercicio 4**"
+    "• la desviacion estandar es de 13.04 y la media de 12.06\n",
+    "• En la figura 2 de el bloxplot se observa un valor atipico que afecta la simetria de los datos \n",
+    "• En la nube de puntos se visualiza la cantidad de autores ubicados por país de procedencia y segun la metrica se puede ver la cantidad de papers publicados \n"
    ]
   },
   {
@@ -905,7 +907,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En el patrón de ramificación de el árbol filogenético de el hongo Reishi, se refleja cómo las especies u otros grupos evolucionaron a partir de una serie de ancestros comunes."
+    "En el patrón de ramificación de el árbol filogenético de el hongo Reishi, se refleja cómo las especies u otros grupos evolucionaron a partir de un serie de ancestros comunes. En la ramificacion donde se encuentran MG564468.1 Reisha; MG564470.1 Reisha; MG564469.1Reisha; MG564471.1 Reisha de nuestro árbol, se puede decir que existe una especiacion por actividad antropogenica debido a que se usa para enfermedades como el Alzheimer, el cáncer, la diabetes, el herpes labial y muchas otras condiciones. Por otro lado podemos señalar que las ramificaciones mas alejadas representan a los primeros ancestros intuyendo que la especiacion se dio de manera natural.\n"
    ]
   },
   {
